--- a/src/style.scss
+++ b/src/style.scss
@@ -37,29 +37,11 @@ body {
     transition: perspective 1s ease-in-out;
     pointer-events: none;
     z-index: 0;
-}
 
-@keyframes rotatearound {
-    0% {
-        transform: rotateX(-20deg) rotateY(0deg);
+    * {
+        transform-style: preserve-3d;
+        position: absolute;
     }
-    10% {
-        transform: rotateX(-20deg) rotateY(36deg);
-    }
-    50% {
-        transform: rotateX(-70deg) rotateY(180deg);
-    }
-    60% {
-        transform: rotateX(-70deg) rotateY(216deg);
-    }
-    100% {
-        transform: rotateX(-20deg) rotateY(360deg);
-    }
-}
-
-#scene * {
-    transform-style: preserve-3d;
-    position: absolute;
 }
 
 #sphere {
@@ -67,7 +49,25 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    animation: rotatearound 40s linear infinite;
+    animation: rotate-around 40s linear infinite;
+
+    @keyframes rotate-around {
+        0% {
+            transform: rotateX(-20deg) rotateY(0deg);
+        }
+        10% {
+            transform: rotateX(-20deg) rotateY(36deg);
+        }
+        50% {
+            transform: rotateX(-70deg) rotateY(180deg);
+        }
+        60% {
+            transform: rotateX(-70deg) rotateY(216deg);
+        }
+        100% {
+            transform: rotateX(-20deg) rotateY(360deg);
+        }
+    }
 
     .longitudes,
     .latitudes {
@@ -124,21 +124,19 @@ label {
     font-size: 18px;
     z-index: 10;
     opacity: 0.8;
-}
 
-label:hover {
-    cursor: pointer;
-    opacity: 1;
+    &:hover {
+        cursor: pointer;
+        opacity: 1;
+    }
 }
 
 input {
     display: none;
-}
-
-input:checked ~ #scene {
-    perspective: var(--inner-perspective);
-}
-
-input:not(:checked) ~ #scene {
-    perspective: var(--outer-perspective);
+    &:checked ~ #scene {
+        perspective: var(--inner-perspective);
+    }
+    &:not(:checked) ~ #scene {
+        perspective: var(--outer-perspective);
+    }
 }
